fix: fixed calender themes in dark mode

--- a/app/Components/Calendar/Calendar.scss
+++ b/app/Components/Calendar/Calendar.scss
@@ -67,8 +67,8 @@
       cursor: pointer;
       border: none;
       border-radius: 20%;
-      background: var(--primaryTextColor);
-      color: var(--white);
+      background: transparent;
+      color: var(--calendarSwitchButton);
     }
     &__monthNames {
       color: var(--textColor);
